@@ -454,6 +454,14 @@ public enum CassandraRelevantProperties
     }
 
     /**
+     * Clears the value set in the system property.
+     */
+    public void clearValue()
+    {
+        System.clearProperty(key);
+    }
+
+    /**
      * Sets the value into system properties.
      * @param value to set
      */
