@@ -21,6 +21,7 @@ package org.apache.cassandra.distributed.test;
 import java.net.InetAddress;
 import java.util.UUID;
 
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -32,21 +33,31 @@ import org.apache.cassandra.schema.Schema;
 
 import static org.apache.cassandra.config.CassandraRelevantProperties.IGNORED_SCHEMA_CHECK_ENDPOINTS;
 import static org.apache.cassandra.config.CassandraRelevantProperties.IGNORED_SCHEMA_CHECK_VERSIONS;
+import static org.apache.cassandra.config.CassandraRelevantProperties.RING_DELAY;
 import static org.apache.cassandra.distributed.api.Feature.GOSSIP;
 import static org.apache.cassandra.distributed.api.Feature.NETWORK;
 
 public class MigrationCoordinatorTest extends TestBaseImpl
 {
-
     @Before
     public void setUp()
     {
-        System.clearProperty("cassandra.replace_address");
-        System.clearProperty("cassandra.consistent.rangemovement");
-
-        System.clearProperty(IGNORED_SCHEMA_CHECK_VERSIONS.getKey());
-        System.clearProperty(IGNORED_SCHEMA_CHECK_VERSIONS.getKey());
+        // make the test a bit faster
+        RING_DELAY.setLong(5000);
+        System.setProperty("cassandra.broadcast_interval_ms", "30000");
     }
+
+    @After
+    public void afterTestCleanup()
+    {
+        System.getProperties().remove("cassandra.replace_address");
+        IGNORED_SCHEMA_CHECK_VERSIONS.clearValue();
+        IGNORED_SCHEMA_CHECK_ENDPOINTS.clearValue();
+
+        RING_DELAY.clearValue();
+        System.getProperties().remove("cassandra.broadcast_interval_ms");
+    }
+
     /**
      * We shouldn't wait on versions only available from a node being replaced
      * see CASSANDRA-
@@ -89,7 +100,6 @@ public class MigrationCoordinatorTest extends TestBaseImpl
             IInstanceConfig config = cluster.newInstanceConfig();
             config.set("auto_bootstrap", true);
             IGNORED_SCHEMA_CHECK_ENDPOINTS.setString(ignoredEndpoint.getHostAddress());
-            System.setProperty("cassandra.consistent.rangemovement", "false");
             cluster.bootstrap(config).startup();
         }
     }
@@ -116,7 +126,6 @@ public class MigrationCoordinatorTest extends TestBaseImpl
             IInstanceConfig config = cluster.newInstanceConfig();
             config.set("auto_bootstrap", true);
             IGNORED_SCHEMA_CHECK_VERSIONS.setString(initialVersion.toString() + ',' + oldVersion);
-            System.setProperty("cassandra.consistent.rangemovement", "false");
             cluster.bootstrap(config).startup();
         }
     }
